WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150896
Fix crashing fast-clicking WK2 tests on iOS
https://bugs.webkit.org/show_bug.cgi?id=150896
Summary
Fix crashing fast-clicking WK2 tests on iOS
Wenson Hsieh
Reported
2015-11-04 10:25:50 PST
The two affected tests are fast/events/ios/viewport-device-width-at-initial-scale-fast-clicks.html and css3/touch-action/touch-action-manipulation-fast-clicks.html. Instead of sending rapid-fire single taps and finishing the test when a number of clicks have been detected, we instead fire an amount of taps equal to the number of clicks we expect.
Attachments
Patch
(6.66 KB, patch)
2015-11-04 12:53 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2015-11-04 10:26:39 PST
<
rdar://problem/23344491
>
Wenson Hsieh
Comment 2
2015-11-04 12:53:30 PST
Created
attachment 264805
[details]
Patch
WebKit Commit Bot
Comment 3
2015-11-04 14:22:20 PST
Comment on
attachment 264805
[details]
Patch Clearing flags on attachment: 264805 Committed
r192036
: <
http://trac.webkit.org/changeset/192036
>
WebKit Commit Bot
Comment 4
2015-11-04 14:22:24 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug