Fix crashing fast-clicking WK2 tests on iOS https://bugs.webkit.org/show_bug.cgi?id=150896 <rdar://problem/23344491>

Reviewed by Simon Fraser.

Source/WebKit2:

In order for the modified fast-clicking tests to pass, we can't allow hit-testing to
find the tap highlight view. See the Radar for more UIKit-specific descriptions.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _showTapHighlight]):

LayoutTests:

Fix the fast-clicking tests by making them fire an exact number of times rather than
sending continuously until a minimum number of clicks are fired. This causes us to
avoid crashing during the following test when the marker events corresponding to single
taps fired after the test has completed have been handled.

* css3/touch-action/touch-action-manipulation-fast-clicks.html:
* fast/events/ios/viewport-device-width-at-initial-scale-fast-clicks.html:


Canonical link: https://commits.webkit.org/169119@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192036 268f45cc-cd09-0410-ab3c-d52691b4dbfc